--- a/_config.yml
+++ b/_config.yml
@@ -1,40 +1,40 @@
 
 exclude:
-                    - "/vendor/"
-                    - "Gemfile"
-                    - "Gemfile.lock"
-                    - "README.md"
-                    - "LICENSE.md"
-                    - "*.gemspec"
+  - "/vendor/"
+  - "Gemfile"
+  - "Gemfile.lock"
+  - "README.md"
+  - "LICENSE.md"
+  - "*.gemspec"
 
-                  keep_files:
-                    - "CNAME"
-                    - ".git"
-                    - ".gitignore"
+keep_files:
+  - "CNAME"
+  - ".git"
+  - ".gitignore"
 
 
-                  # Site settings
-                  title: Holistic Development Agency
-                  subtitle: "A free HTML5 agency template"
-                  url: "https://holisticda.com/" # the base hostname & protocol for your site
-                  # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-                  baseurl: ""
-                  cover: "/assets/cover.png"
-                  logo: "/assets/logo.png"
+# Site settings
+title: Holistic Development Agency
+subtitle: "A free HTML5 agency template"
+url: "https://holisticda.com/" # the base hostname & protocol for your site
+# baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
+baseurl: ""
+cover: "/assets/cover.png"
+logo: "/assets/logo.png"
 
-                  # Build settings
-                  markdown: kramdown
+# Build settings
+markdown: kramdown
 
-                  # Google analytics
-                  # ga_tracking_id: "UA-XXXX-1"
+# Google analytics
+# ga_tracking_id: "UA-XXXX-1"
 
-                  # Category descriptions (for archive pages)
-                  descriptions:
-                    - cat: jekyll
-                      desc: "Posts describing Jekyll setup techniques."
+# Category descriptions (for archive pages)
+descriptions:
+  - cat: jekyll
+    desc: "Posts describing Jekyll setup techniques."
 
-                    - cat: dummy
-                      desc: "Just some placeholder posts, lorem ipsum and the rest."
+  - cat: dummy
+    desc: "Just some placeholder posts, lorem ipsum and the rest."
 
-                  gems:
-                    - jekyll-sitemap
+plagins:
+  - jekyll-sitemap
